crates/bevy_macros_compile_fail_tests/tests/deref_derive/missing_attribute.fail.rs
use bevy_derive::Deref;

#[derive(Deref)]
struct TupleStruct(usize, String);

#[derive(Deref)]
struct Struct {
    foo: usize,
    bar: String,
}

fn main() {}
